syntax = "proto3";
package prism.amm;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "prism/amm/oracle_price_pair.proto";
import "prism/amm/order.proto";
import "prism/amm/params.proto";
import "prism/amm/pending_token_introduction.proto";
import "prism/amm/pool.proto";
import "prism/amm/pool_token.proto";
import "prism/amm/schedule_order.proto";
import "prism/amm/virtual_balance_pool_token.proto";
import "prism/amm/weighted_token.proto";
import "prism/amm/whitelisted_route.proto";
import "prism/amm/yamm_configuration.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/amm/types";

message GenesisPoolData {
  Pool pool = 1 [(gogoproto.nullable) = false];
  string total_lp_token_supply = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  repeated PoolToken pool_token_list = 3 [(gogoproto.nullable) = false];
}

// GenesisState defines the amm module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated GenesisPoolData pool_list = 2 [(gogoproto.nullable) = false];
  repeated WeightedPoolProperties weighted_pool_properties_list = 3 [(gogoproto.nullable) = false];
  map<uint64, string> yamm_pool_asset_id = 4 [(gogoproto.nullable) = false];
  repeated VirtualBalancePoolToken introducing_pool_token_list = 5 [(gogoproto.nullable) = false];
  repeated VirtualBalancePoolToken expiring_pool_token_list = 6 [(gogoproto.nullable) = false];
  repeated YammConfiguration yamm_configuration_list = 7 [(gogoproto.nullable) = false];
  repeated WhitelistedRoute whitelisted_route_list = 8 [(gogoproto.nullable) = false];
  repeated Order order_list = 9 [(gogoproto.nullable) = false];
  uint64 order_count = 10;
  repeated uint64 executable_order_list = 11;
  repeated ScheduleOrder schedule_order_list = 12 [(gogoproto.nullable) = false];
  bool vault_paused = 13;
  repeated OraclePricePair oracle_price_pair_list = 14 [(gogoproto.nullable) = false];
  repeated PendingTokenIntroduction pending_token_introduction_list = 15 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
